# hook-f1

./: .gitignore  CLAUDE.md  README.md  config_2026.py  dashboard.py  dashboard_2026_australia.py  evaluate_2025_r1.py  evaluate_multi_era.py  evaluate_season_models.py  generate_2025_data.py  generate_2026_data.py  predict_2026_r1.py  predict_2026_shanghai.py  pyproject.toml  run_stage9_nuts.py  simulate_2026_australia.py  simulate_2026_japan.py  simulate_2026_race.py  simulate_race.py  simulate_seasons.py  simulate_seasons_nuts.py  stage9_nuts_2025.pkl
.claude/skills/: predict-race.md
.devcontainer/: devcontainer.json
archive/: PREDICTIONS_2026.md  SIMULATION_RESULTS.md  evaluate_2025_season.py  evaluation_framework.py  f1-env.yaml  f1-eval-config.yaml  f1-eval-script.py  f1.ipynb  predict_2026_season.py  simulate_2025_season.py
archive/models/: stage4_recency_grid.py  stage5_circuit.py
data/: constructor_results.csv  constructor_standings.csv  constructors.csv  driver_standings.csv  drivers.csv  qualifying.csv  races.csv  results.csv  seasons.csv  sim_2026_australia.json  sim_2026_china.json  sim_2026_japan.json  sim_2026_r01_australia.json  sim_2026_r02_china.json  sim_2026_shanghai.json
models/: stage1_global_transition.py  stage2_driver_pooling.py  stage3_constructor.py  stage6_recency_constructor.py  stage7_hmm.py  stage8_plackett_luce.py  stage9_bayesian_ss.py
